--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,10 @@
   "extends": ["airbnb-base"],
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "describe": "readonly",
+    "it": "readonly",
+    "expect": "readonly"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
