--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@babel/preset-env": "^7.6.3",
     "babel-jest": "^24.9.0",
     "babel-plugin-add-module-exports": "^1.0.2",
-    "babel-plugin-ramda": "^2.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
-    "ramda": "^0.26.1",
     "webpack": "^4.41.2"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
